[package]
name = "muta-chain"
version = "0.1.0"
authors = [ "yejiayu <yejiayu.fe@gmail.com>" ]
edition = "2018"

[dependencies]
derive_more = "0.15"

  [dependencies.muta]
  git = "https://github.com/nervosnetwork/muta"
  tag = "v0.1.0-rc.2-huobi"

  [dependencies.protocol]
  git = "https://github.com/nervosnetwork/muta"
  tag = "v0.1.0-rc.2-huobi"
  package = "muta-protocol"

  [dependencies.tokio]
  version = "0.2"
  features = [ "macros", "rt-core" ]

  [dependencies.asset]
  git = "https://github.com/nervosnetwork/muta"
  tag = "v0.1.0-rc.2-huobi"

  [dependencies.metadata]
  path = "services/metadata"

  [dependencies.attestation]
  path = "services/attestation"

[workspace]
members = [ "services/metadata", "services/attestation" ]
