[package]
name = "metadata"
version = "0.1.0"
authors = ["yejiayu <yejiayu.fe@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
binding-macro = { git = "https://github.com/nervosnetwork/muta", tag = "v0.2.0-beta.1"}
protocol = { git = "https://github.com/nervosnetwork/muta", tag = "v0.2.0-beta.1", package = "muta-protocol" }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
derive_more = "0.15"
byteorder = "1.3"
